--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -35,7 +35,14 @@ body, html {height: 100%;}
 .features #ico-rpg {background-position: center;}
 .features #ico-kitpvp {background-position: 130px -22px;}
 .features a {color: #EAAB4E; text-decoration: none; font-size: 18px; font-family: 'Lato', sans-serif; margin-bottom: 120px; position: relative; right: 15px;}
-
+.store-menu {text-align: center; width: 400px; margin: auto; height: 55px; line-height: 55px; font-family: 'Lato', sans-serif; font-size: 0;}
+.store-menu a {color: #EAAB4E; text-decoration: none; padding: 20px 20px 20px 20px; font-size: 18px;}
+.store-menu a:hover {background: #EAAB4E; color: #fff;}
+.store {font-family: 'Lato', sans-serif; text-align: center; width: 1000px; margin: auto; position: relative; left: 45px; padding-top: 100px;}
+.store .box {width: 35%; display: inline-block; color: #fff; text-align: left; margin-bottom: 25px; margin-left: 70px; margin-right: 70px;}
+.store .box img {float: left; margin-right: 25px;}
+.store .box p {padding-bottom: 22px;}
+.store .box .buy-btn {color: #EAAB4E; border: 2px solid #EAAB4E; text-decoration: none; padding: 8px;}
 
 .footer {color: #fff; font-family: 'Lato', sans-serif; font-size: 16px; text-align: center; height: 50px;}
 .footer #copyright {margin-right: 25px; display: inline-block;}
@@ -43,3 +50,4 @@ body, html {height: 100%;}
 .footer .links a {color: #EAAB4E; text-decoration: none; margin-left: 10px; margin-right: 10px; font-size: 16px;}
 
 .push {height: 100px;}
+.container {width: 100%; margin: auto; margin-top: 5%;}
