--- a/views/pages/store.ejs
+++ b/views/pages/store.ejs
@@ -1,6 +1,34 @@
 <% include ../layouts/header.ejs %>
 <div class="container">
+	<div class="store-menu">
+		<a href="#" style="border-top: 2px solid #EAAB4E; border-left: 2px solid #EAAB4E; border-bottom: 2px solid #EAAB4E; border-top-left-radius: 10px; border-bottom-left-radius: 10px;">All Items</a>
+		<a href="#" style="border-top: 2px solid #EAAB4E; border-bottom: 2px solid #EAAB4E;">RPG Items</a>
+		<a href="#" style="border-top: 2px solid #EAAB4E; border-right: 2px solid #EAAB4E; border-bottom: 2px solid #EAAB4E; border-top-right-radius: 10px; border-bottom-right-radius: 10px;">PVP Items</a>
+	</div>
 	<div class="store">
+		<div class="box">
+			<img src="http://placehold.it/100x100/EAAA50" alt="">
+			<p>Brief description goes here</p>
+			<a href="#" class="buy-btn">$2.99</a>
+		</div>
+		<div class="box">
+			<img src="http://placehold.it/100x100/EAAA50" alt="">
+			<h2>Item Name</h2>
+			<p>Brief description goes here</p>
+			<a href="#" class="buy-btn">$2.99</a>
+		</div>
+		<div class="box">
+			<img src="http://placehold.it/100x100/EAAA50" alt="">
+			<h2>Item Name</h2>
+			<p>Brief description goes here</p>
+			<a href="#" class="buy-btn">$2.99</a>
+		</div>
+		<div class="box">
+			<img src="http://placehold.it/100x100/EAAA50" alt="">
+			<h2>Item Name</h2>
+			<p>Brief description goes here</p>
+			<a href="#" class="buy-btn">$2.99</a>
+		</div>
 		<div class="box">
 			<img src="http://placehold.it/100x100/EAAA50" alt="">
 			<h2>Item Name</h2>
@@ -9,3 +37,4 @@
 		</div>
 	</div>
 </div>
+<% include ../layouts/footer.ejs %>
