--- a/views/pages/store.ejs
+++ b/views/pages/store.ejs
@@ -8,7 +8,7 @@
 	<div class="store">
 		<% storeData.forEach(function(storeItemMeta) { %>
 		<div class="box">
-			<img src="http://placehold.it/150x150/EAAA50" alt="">
+			<img src="<%= storeItemMeta.imgUrl %>" alt="">
 			<h2><%= storeItemMeta.name %></h2>
 			<p><%= storeItemMeta.desc %></p>
 			<a href="#" class="buy-btn"><span>$<%= storeItemMeta.price %></span></a>
