--- a/views/pages/store.ejs
+++ b/views/pages/store.ejs
@@ -14,5 +14,6 @@
 			<a href="#" class="buy-btn"><span>$<%= storeItemMeta.price %></span></a>
 		</div>
 		<% }); %>
+	</div>
 </div>
 <% include ../layouts/footer.ejs %>
