--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -48,11 +48,17 @@ body, html {height: 100%;}
 .stats-menu {text-align: center; width: 80%; margin: auto; height: 55px; line-height: 55px; font-family: 'Lato', sans-serif; font-size: 0; position: relative;}
 .stats-menu a {color: #EAAB4E; text-decoration: none;  font-size: 18px; display: block; width: 120px; float: left;}
 .stats-menu a:hover {background: #EAAB4E; color: #fff;}
+.stats-menu a.active {background: #EAAB4E; color: #fff;}
 .stats-menu .filter {position: absolute; top: 55px;} 
 .stats-menu .filter label {font-size: 18px; color: #fff;}
 .stats-menu .filter input {margin-left: 12.5px; margin-right: 12.5px;}
 .stats-menu .filter input[type="checkbox"] {border: 10px solid #000;}
 .stats {color: #fff; font-family: 'Lato', sans-serif;}
+.stats table {float: left; position: relative; left: -250px; top: 55px; width: 900px; border-collapse: collapse;}
+.stats table tr th {text-align: center; padding-bottom: 10px; font-family: 'Cinzel', serif;}
+.stats table tr {}
+.stats table #board {background: #313B47; height: 65px; text-align: center; border: 2px solid #EAAB4E;}
+.stats table #board:nth-child(odd) {background: #35414F;}
 
 .footer {color: #fff; font-family: 'Lato', sans-serif; font-size: 16px; text-align: center; height: 50px;}
 .footer #copyright {margin-right: 25px; display: inline-block;}
